ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.4.6, 2.5.1
    • Affects Version/s: 2.5.0
    • Component/s: Sharding
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The balancer should not continue if it detects inconsistency in the config server - it's possible that the inconsistency is not detected by migrate/split sanity checks (which just read the config data from the first config server, by default).

            Assignee:
            Randolph Tan
            Reporter:
            Greg Studer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: