SERVER-10015 balancer should stop when ConfigServerCheck indicates inconsistency

Conflicts:
	src/mongo/s/server.cpp